--- a/app/globals.css
+++ b/app/globals.css
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css2?family=Figtree:wght@300..900&display=swap');
 @import "tailwindcss";
 
 @font-face {
@@ -131,4 +132,8 @@ body {
   color: transparent;
   -webkit-text-stroke: 2px rgba(255,255,255,0.35);
   text-stroke: 2px rgba(255,255,255,0.35);
+}
+
+.figtree {
+  font-family: 'figtree';
 }
