--- a/app/globals.css
+++ b/app/globals.css
@@ -78,8 +78,24 @@
   }
 }
 
+@keyframes gradient {
+  0% {
+    background-position: 0% 50%;
+  }
+  50% {
+    background-position: 100% 50%;
+  }
+  100% {
+    background-position: 0% 50%;
+  }
+}
+
 @utility animate-shine {
   animation: var(--animate-shine);
+}
+
+@utility animate-gradient {
+  animation: gradient 8s linear infinite;
 }
 
 @theme default {
